Lesson 6 Data Validation and Error Handling
