# swagger.json
@@ -65,7 +65,7 @@
       },
       "post": {
         "tags": ["Tickets"],
-        "description": "Creating a single ticket to our database",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -105,11 +105,20 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK - The request was successful."
+          },
           "201": {
-            "description": "successfully created a ticket"
+            "description": "Created - The ticket was successfully created."
+          },
+          "400": {
+            "description": "Bad Request - The request was malformed or missing required parameters."
+          },
+          "404": {
+            "description": "Bad Request - Data validation check error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error - An unexpected error occurred on the server."
           }
         }
       }
@@ -137,6 +146,94 @@
             "description": "Internal Server Error"
           }
         }
+      },
+      "put": {
+        "tags": ["Tickets"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "title": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "assignee": {
+                  "example": "any"
+                },
+                "reporter": {
+                  "example": "any"
+                },
+                "priority": {
+                  "example": "any"
+                },
+                "status": {
+                  "example": "any"
+                },
+                "createdDate": {
+                  "example": "any"
+                },
+                "lastUpdatedDate": {
+                  "example": "any"
+                },
+                "comments": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK - The request was successful."
+          },
+          "204": {
+            "description": "Updated - The ticket was successfully updated."
+          },
+          "400": {
+            "description": "Bad Request - The request was malformed or missing required parameters."
+          },
+          "404": {
+            "description": "Bad Request - Data validation check error."
+          },
+          "500": {
+            "description": "Internal Server Error - An unexpected error occurred on the server."
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Tickets"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK - The ticket was successful deleted."
+          },
+          "400": {
+            "description": "Bad Request - The request was malformed or missing required parameters."
+          },
+          "500": {
+            "description": "Internal Server Error - An unexpected error occurred on the server."
+          }
+        }
       }
     },
     "/employees/": {
@@ -148,14 +245,17 @@
           "200": {
             "description": "OK"
           },
+          "400": {
+            "description": "Bad Request"
+          },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error - An unexpected error occurred on the server."
           }
         }
       },
       "post": {
         "tags": ["Employees"],
-        "description": "Creating a single employee to our database",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -177,11 +277,23 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "OK - The request was successful."
+          },
           "201": {
-            "description": "successfully created an employee"
+            "description": "Created - The employee was successfully created."
+          },
+          "204": {
+            "description": "Updated - The employee was successfully updated."
+          },
+          "400": {
+            "description": "Bad Request - The request was malformed or missing required parameters."
+          },
+          "404": {
+            "description": "Bad Request - Data validation check error."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error - An unexpected error occurred on the server."
           }
         }
       }
@@ -207,6 +319,79 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "tags": ["Employees"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK - The request was successful."
+          },
+          "201": {
+            "description": "Created - The employee was successfully created."
+          },
+          "204": {
+            "description": "Updated - The employee was successfully updated."
+          },
+          "400": {
+            "description": "Bad Request - The request was malformed or missing required parameters."
+          },
+          "404": {
+            "description": "Bad Request - Data validation check error."
+          },
+          "500": {
+            "description": "Internal Server Error - An unexpected error occurred on the server."
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Employees"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK - The ticket was successful deleted."
+          },
+          "400": {
+            "description": "Bad Request - The request was malformed or missing required parameters."
+          },
+          "500": {
+            "description": "Internal Server Error - An unexpected error occurred on the server."
           }
         }
       }
